--- a/baza_studentow_edukacja.vcxproj.filters
+++ b/baza_studentow_edukacja.vcxproj.filters
@@ -15,30 +15,30 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\ConverterTest\Main.h">
+    <ClInclude Include="Main.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="..\ConverterTest\Menu.h">
+    <ClInclude Include="Menu.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="..\ConverterTest\studentEdukacja.h">
+    <ClInclude Include="studentEdukacja.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="..\ConverterTest\StudentEdukacjaDao.h">
+    <ClInclude Include="StudentEdukacjaDao.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ConverterTest\Main.cpp">
+    <ClCompile Include="studentEdukacja.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="..\ConverterTest\Menu.cpp">
+    <ClCompile Include="StudentEdukacjaDao.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="..\ConverterTest\studentEdukacja.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="..\ConverterTest\StudentEdukacjaDao.cpp">
+    <ClCompile Include="Menu.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
